--- a/index.html
+++ b/index.html
@@ -5,8 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea House</title>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&display=swap" rel="stylesheet">
+    <!-- font-awesome-->
+    <script src="https://kit.fontawesome.com/20a6b69d19.js" crossorigin="anonymous"></script>
+
+    <!-- tailwind css -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              },
+              fontFamily: {
+                manrope: ["Manrope", "sans-serif"],
+              }
+            }
+          }
+        }
+      </script>
 </head>
-<body>
-    
+<body class="font-manrope">
+    <!-- header and banner section start-->
+    <header class="container max-w-7xl mx-auto">
+        <div class="flex items-center">
+           <div>
+              <h1 class="text-7xl font-bold">
+                It's good 
+                <br> 
+                 tea time at The 
+                 <br>
+                 Tea House
+              </h1>
+              <p class="mt-7 text-lg w-3/4">
+                Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+              </p>
+              <button class="text-white text-center font-semibold bg-gradient-to-r from-orange-400 via-orange-600 to-red-600 px-5 py-2 rounded-lg mt-7">
+                Explore More
+              </button>
+           </div>
+            <div class="relative">
+              <div class="z-10">
+                <img src="images/banner.png" alt="">
+              </div>
+                <div class="shadow-lg absolute top-28 px-2 md:px-10 md:top-96 md:left-32 py-2 lg:top-96 lg:left-24 bg-white lg:px-6 lg:py-4 rounded-lg flex">
+                    <div class="flex items-center gap-3">
+                        <div>
+                            <i class="fa-solid fa-star text-3xl text-amber-300"></i>
+                        </div>
+                        <div>
+                            <h5 class="font-extrabold text-3xl">5.00</h5>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
+                      </div>
+                </div>
+            </div>
+           <div>
+             
+           </div>
+        </div>
+    </header>
+    <!-- header and banner section end-->
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
