header section responsive

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </head>
 <body class="font-manrope">
     <!-- header and banner section start-->
-    <header class="container max-w-7xl mx-auto">
-        <div class="flex items-center">
+    <header class="container max-w-7xl mx-auto pt-10 p-2">
+        <div class="md:flex items-center">
            <div>
               <h1 class="text-7xl font-bold">
                 It's good 
@@ -45,7 +45,7 @@
                 Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
               </p>
               <button class="text-white text-center font-semibold bg-gradient-to-r from-orange-400 via-orange-600 to-red-600 px-5 py-2 rounded-lg mt-7">
-                Explore More
+                <a href="">Explore More</a>
               </button>
            </div>
             <div class="relative">
