--- a/index.html
+++ b/index.html
@@ -70,8 +70,39 @@
         </div>
     </header>
     <!-- header and banner section end-->
-    <main>
-
+    <main class="container max-w-7xl mx-auto pt-10 p-2">
+        <!-- featured products section start -->
+        <section class="mt-32">
+          <h2 class="text-center font-extrabold text-4xl">Our Featured Products</h2>
+          <p class="text-center mt-5">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+            <br>
+            by injected humour, or randomised words which don't look even slightly believable. 
+          </p>
+          <div class="grid md:grid-cols-3 lg:grid-cols-4 gap-4 lg:h-80 mt-16">
+            <div class="bg-slate-100 text-center p-5">
+                <img class="mx-auto" src="images/tea-1.png" alt="">
+                <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                <p>Creamer could be replaced <br> by fresh milk</p>
+            </div>
+            <div class="bg-slate-100 text-center p-5">
+                <img class="mx-auto" src="images/tea-2.png" alt="">
+                <h2 class="text-2xl font-extrabold">Black Tea</h2>
+                <p>Creamer could be replaced <br> by fresh milk</p>
+            </div>
+            <div class="bg-slate-100 text-center p-5">
+                <img class="mx-auto" src="images/tea-3.png" alt="">
+                <h2 class="text-2xl font-extrabold">Lemon Tea</h2>
+                <p>Creamer could be replaced <br> by fresh milk</p>
+            </div>
+            <div class="bg-slate-100 text-center p-5">
+                <img class="mx-auto" src="images/tea-4.png" alt="">
+                <h2 class="text-2xl font-extrabold">Green Tea</h2>
+                <p>Creamer could be replaced <br> by fresh milk</p>
+            </div>
+          </div>
+        </section>
+        <!-- featured products section end -->
     </main>
     <footer>
 
