--- a/index.html
+++ b/index.html
@@ -103,6 +103,43 @@
           </div>
         </section>
         <!-- featured products section end -->
+
+        <!-- great tea section start -->
+        <section class="mt-36">
+          <div class="grid md:grid-cols-2 items-center gap-4">
+            <div class="grid grid-cols-2 grid-rows-3 gap-4 md:w-5/6">
+              <div
+                class="rounded-lg bg-gradient-to-r from-red-200 via-red-100 to-white h-38"
+              ></div>
+                <div class="row-span-2 rounded-lg bg-orange-50">
+                  <img class="mx-auto my-5" src="images/fresh-1.png" alt="">
+                </div>
+                <div class="row-span-2 bg-gradient-to-r bg-teal-50">
+                  <img class="mx-auto my-5" src="images/fresh-2.png" alt="">
+                </div>
+                <div
+                class="bg-gradient-to-r from-stone-200 via-stone-100 to-white h-38"
+              ></div>
+            </div>
+            <div class="space-y-5 leading-9">
+              <h2 class="font-extrabold text-4xl">
+                Great Tea, Freshly Presented
+              </h2>
+              <p>
+                The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+              </p>
+               <h4 class="text-2xl font-extrabold">Unique Taste</h4>
+               <p>
+                A Unique and different style from other teapots gives a luxurious and minimalist impression
+               </p>
+               <h4 class="text-2xl font-extrabold">Premium Quality</h4>
+               <p>
+                Premium Quality that makes tea more elegant and more durable when you use it.
+               </p>
+            </div>
+          </div>
+        </section>
+        <!-- Great Tea section end -->
     </main>
     <footer>
 
