--- a/index.html
+++ b/index.html
@@ -140,6 +140,89 @@
           </div>
         </section>
         <!-- Great Tea section end -->
+
+        <!-- super clients section start -->
+        <section class="mt-36">
+          <div class="bg-gradient-to-r from-orange-400 to-red-600 rounded-lg text-white px-16 py-3 md:flex gap-6">
+            <div class="flex items-center justify-center">
+                <div class="w-3/5 space-y-5 leading-8">
+                 <h2 class="font-extrabold text-4xl">Meet Our Super <br> Clients</h2>
+                <p>
+                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+                </p>
+               <button class="text-center font-semibold bg-white px-4 py-2 text-red-500  rounded-md">
+                Show All
+               </button>
+             </div>
+           </div>
+           
+        <!-- 3 reviewers -->
+        <div class="relative py-24">
+          <!-- middle reviewer -->
+          <div class="z-10 absolute top-52 md:-left-10 w-3/4">
+            <div
+              class="relative bg-white h-60 rounded-lg text-black flex px-5 items-center"
+            >
+              <div class="absolute -top-5 -left-5">
+                <img src="./images/client.png" alt="" />
+              </div>
+              <div>
+                <p class="mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+
+                <h4 class="font-bold">Ilham Yuda</h4>
+
+                <small>Businessman</small>
+              </div>
+            </div>
+          </div>
+          <!-- top reviewer -->
+          <div class="relative left-20 md:left-32 opacity-40 w-3/4">
+            <div
+              class="relative bg-white h-56 rounded-lg text-black flex px-5 items-center"
+            >
+              <div class="absolute -top-5 -left-5">
+                <img src="./images/client.png" alt="" />
+              </div>
+              <div>
+                <p class="mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+
+                <h4 class="font-bold">Ilham Yuda</h4>
+
+                <small>Businessman</small>
+              </div>
+            </div>
+          </div>
+
+          <!-- bottom reviewer -->
+          <div class="relative left-20 md:left-32 top-10 opacity-40 w-3/4">
+            <div
+              class="relative bg-white h-56 rounded-lg text-black flex px-5 items-center"
+            >
+              <div class="absolute -top-5 -left-5">
+                <img src="./images/client.png" alt="" />
+              </div>
+              <div>
+                <p class="mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+
+                <h4 class="font-bold">Ilham Yuda</h4>
+
+                <small>Businessman</small>
+              </div>
+            </div>
+          </div>
+          </div>
+         </div>
+        </section>
+        <!-- Great Tea section end -->
     </main>
     <footer>
 
