--- a/index.html
+++ b/index.html
@@ -223,6 +223,56 @@
          </div>
         </section>
         <!-- Great Tea section end -->
+
+        <!-- news section start -->
+        <section class="mt-24">
+          <div class="space-y-4 leading-8">
+            <div class="text-center">
+              <h2 class="font-extrabold text-4xl">News & Events</h2>
+              <p class="mt-5">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                <br>
+                by injected humour, or randomised words which don't look even slightly believable. 
+              </p>
+            </div>
+            <div class="py-5 grid md:grid-cols-2 items-center lg:grid-cols-3 gap-8">
+              <div class="shadow-lg">
+                 <img src="images/news-1.png" alt="">
+                 <div class="w-3/4">
+                  <p>Feb 05, 2027</p>
+                  <h4 class="text-2xl font-extrabold">Collecting 8 points for discount</h4>
+                  <p>
+                   There are many variations of passages of Lorem Ipsum available.
+                  </p>
+                  <button class="font-bold">Learn More</button>
+                 </div>
+              </div>
+              <div class="shadow-lg">
+                 <img src="images/news-2.png" alt="">
+                 <div class="w-3/4">
+                  <p>Feb 05, 2027</p>
+                 <h4 class="text-2xl font-extrabold">Collecting 8 points for discount</h4>
+                 <p>
+                  There are many variations of passages of Lorem Ipsum available.
+                 </p>
+                 <button class="font-bold">Learn More</button>
+                 </div>
+              </div>
+              <div class="shadow-lg">
+                 <img src="images/news-3.png" alt="">
+                <div class="w-3/4">
+                  <p>Feb 05, 2027</p>
+                  <h4 class="text-2xl font-extrabold">Collecting 8 points for discount</h4>
+                  <p>
+                   There are many variations of passages of Lorem Ipsum available.
+                  </p>
+                  <button class="font-bold">Learn More</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- news section end -->
     </main>
     <footer>
 
