footer section completed

--- a/index.html
+++ b/index.html
@@ -274,8 +274,66 @@
         </section>
         <!-- news section end -->
     </main>
-    <footer>
-
+    <!-- footer section start -->
+    <footer class="bg-gradient-to-r from-red-50 via-orange-100 to-red-100 px-16 md:px-32 min-h-full mt-24">
+       <div class="container max-w-7xl mx-auto pt-16 p-2">
+          <div class="flex justify-between items-center py-3">
+             <div>
+              <img src="images/cup.png" alt="">
+             </div>
+               <div class="flex gap-8 items-center ml-4">
+                <p>Ready to get strated?</p>
+                <button class="text-white text-center font-semibold bg-gradient-to-r from-orange-400 via-orange-600 to-red-600 px-5 py-2 rounded-lg">
+                  <a href="">Get Started</a>
+                </button>
+               </div>
+          </div>
+          <div class="mt-8 mb-5 py-3 grid gap-4 grid-cols-2 md:grid-cols-3 lg:grid-cols-4 space-y-5 leading-8 justify-evenly">
+            <div class="pt-4">
+              <h4 class="text-2xl font-extrabold">Quick Links</h4>
+              <ul>
+                 <li>Home</li>
+                 <li>About Us</li>
+                 <li>Insurance</li>
+                 <li>Privacy Policy</li>
+              </ul>
+            </div>
+            <div>
+              <h4 class="text-2xl font-extrabold">Our Service</h4>
+              <ul>
+                 <li>Life Insurance</li>
+                 <li>Car Insurance</li>
+                 <li>Health Insurance</li>
+                 <li>House Insurance</li>
+              </ul>
+            </div>
+            <div>
+              <h4 class="text-2xl font-extrabold">Help</h4>
+              <ul>
+                 <li>FAQs</li>
+                 <li>Contact Us</li>
+              </ul>
+            </div>
+            <div>
+              <h4 class="text-2xl font-extrabold">Subscribe to our newsletter</h4>
+               <div class="flex mb-3">
+                <input
+                  class="bg-transparent border-b-2 border-black w-4/6 md:w-5/6"
+                  type="email"
+                  placeholder="Email Address"
+                />
+                <i
+                  class="p-3 fa-solid fa-chevron-right bg-orange-600 rounded-full text-white"
+                ></i>
+              </div>
+              <i class="fa-brands fa-facebook text-3xl"></i>
+               <i class="fa-brands fa-square-twitter text-3xl pl-3"></i>
+               <i class="fa-brands fa-square-instagram text-3xl pl-3"></i>
+            </div>
+          </div>
+          <p class="text-center py-4">© 2027 UIDesign.to - All rights reserved.</p>
+       </div>
     </footer>
+     <!-- footer section end -->
 </body>
 </html>
